--- a/Seance11_Données_digitales/Slides/SOC8655_S11.2_version_courte_Collecte_Donnees_digitales.Rmd
+++ b/Seance11_Données_digitales/Slides/SOC8655_S11.2_version_courte_Collecte_Donnees_digitales.Rmd
@@ -23,7 +23,7 @@ output:
 
 - Conclusion  
 
-## Remarques importantes
+## Remarques importantess
 
 - Nous ferons recours dans cette partie du cours à plusieurs terminologies issues des sciences de l'informatique.
 - Nous ne serons pas amener à comprendre de manière spécifique chaque thème technique avant de procéder.
@@ -118,7 +118,11 @@ wikipedia_page
 
 ## Analyse HTML (Parsing HTML) - code source
 
-![](/Users/visseho/OneDrive - UQAM/Cours/Images_cours/c10html.png)
+```{r, echo=FALSE, out.width='70%'}
+knitr::include_graphics("../Images/c10html.png")
+
+```
+
 
 
 ## Analyse HTML (Parsing HTML)
@@ -266,10 +270,27 @@ prof_tableau
 
 library(selectr)
 
+wikipedia_page <- read_html("https://en.wikipedia.org/wiki/World_Health_Organization_ranking_of_health_systems_in_2000")
+
+
+wikipedia_css_section <- html_nodes(wikipedia_page, css = '.thumbborder , .jquery-tablesorter td , .headerSort')
+
+wikipedia_css_section[[1]]
+
+tableau <- html_text(wikipedia_css_section)
+tableau
+
 # refait en novembre 2022
-section_site1 <- html_nodes(site_uqam, css = "#main span , .poste , #main a")
+
+site_uqam <- read_html("https://sociologie.uqam.ca/corps-professoral/professeurs-es/")
+section_site1 <- html_nodes(site_uqam, css = '.infos')
+
+
 nom_texte1 <- html_text(section_site1)
+
 nom_texte1
+
+nom_texte1[[1]]
 ```
 
 
